--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prathamesh</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +13,7 @@
     <meta name="discription"content="I'am Prathamesh Giri "/>
     <meta name="keywords" content="Prathamesh Giri, prathameshgiri, Prathamesh," />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/x-icon" href="img/gps.jpeg" />
+    <link rel="icon" type="image/x-icon" href="gps.jpeg" />
 </head>
 <body class="main-content">
     <header class="container header active" id="home">
@@ -21,7 +21,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero2.jpg" alt="">
+                    <img src="hero2.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -163,7 +163,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Projects</h3>
