--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name" style="text-align: left;">
-                    Hello I'm <span>Prathamesh Giri.</span>
+                    Hello I'm <span>Prathamesh Giri.</span><br>
                     Web Developer.
                 </h1>
                 <p>
