--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="keywords" content="Prathamesh Giri, prathameshgiri, Prathamesh," />
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/x-icon" href="gps.jpeg" />
+    <meta name="google-site-verification" content="H4jKgxScY1RiBcTLJ85v1hYSdORnCN5GLMENmOjeogo" />
 </head>
 <body class="main-content">
     <header class="container header active" id="home">
