--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/x-icon" href="gps.jpeg" />
     <meta name="google-site-verification" content="H4jKgxScY1RiBcTLJ85v1hYSdORnCN5GLMENmOjeogo" />
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KPJ7CQH');</script>
+<!-- End Google Tag Manager -->
 </head>
-<body class="main-content">
+<body class="main-content"><!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPJ7CQH"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <header class="container header active" id="home">
         <div class="header-content">
             <div class="left-header">
