--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="projets.css">
 </head>
 <body>
@@ -46,7 +46,24 @@
         </a>
       </div>
   
-      
+      <div class="ag-courses_item">
+        <a href="https://huggingface.co/spaces/prathameshgiri/Prathamesh" class="ag-courses-item_link">
+          <div class="ag-courses-item_bg"></div>
+  
+          <div class="ag-courses-item_title">
+            Facial Image Restoration
+          </div>
+  
+          <div class="ag-courses-item_date-box">
+            Created:
+            <span class="ag-courses-item_date">
+              21.05.2023
+            </span>
+          </div>
+        </a>
+      </div>
+
+
       </div>
   
     </div>
