--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,22 @@
         </a>
       </div>
 
+      <div class="ag-courses_item">
+        <a href=" https://prathameshgiri.github.io/instagramclone/" class="ag-courses-item_link">
+          <div class="ag-courses-item_bg"></div>
+  
+          <div class="ag-courses-item_title">
+            Instagram Clone
+          </div>
+  
+          <div class="ag-courses-item_date-box">
+            Created:
+            <span class="ag-courses-item_date">
+              02.06.2023
+            </span>
+          </div>
+        </a>
+      </div>
 
       </div>
   
