--- a/index.html
+++ b/index.html
@@ -211,17 +211,24 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            Welcome to the digital world where creativity meets functionality! I am Prathamesh Giri, a passionate and 
+            versatile professional excelling in the realms of web development, graphic design, and application development.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            As a Web Developer, I specialize in crafting immersive digital experiences that seamlessly blend aesthetics with functionality. 
+            With a keen eye for design and a mastery of programming languages such as HTML, CSS, and JavaScript, I bring websites to life, ensuring they are 
+            not only visually stunning but also intuitive to navigate and user-friendly.
+            <br><br>
+            In the realm of Graphic Design, I transform ideas into visually captivating creations. From branding materials to marketing collateral, 
+            I leverage my artistic flair and technical expertise to deliver designs that captivate audiences and leave a lasting impression. Whether it's crafting logos, 
+            designing brochures, or conceptualizing entire brand identities, I thrive on turning visions into reality through the power of visual storytelling.
+            <br><br>
+            Moreover, as an Application Developer, I harness the latest technologies and frameworks to develop innovative and user-centric applications across various platforms. 
+            From mobile apps to desktop software, I specialize in creating robust solutions that cater to diverse user needs while prioritizing performance, scalability, and security.
+            <br><br>
+            Join me on this journey of innovation and creativity as we explore the boundless possibilities of digital design and development. Let's elevate your online 
+            presence and bring your ideas to life in ways that resonate with your audience and drive meaningful engagement.
           </p>
         </section>
 
