--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">Professional Bio</h2>
+          <h2 class="h2 article-title">About Me</h2>
         </header>
 
         <section class="about-text">
