--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Prathamesh Giri">Prathamesh S Giri</h1>
+          <h1 class="name" title="Prathamesh Giri">Prathamesh S. Giri</h1>
 
           <p class="title">Web developer</p>
         </div>
