--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web development</h4>
+              <h4 class="h4 timeline-item-title">Application development</h4>
 
               <span>2024 — Present</span>
 
